[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Dialogs/Scripts/Settings_Dialog.gd" type="Script" id=1]

[node name="Settings_Dialog" type="WindowDialog"]
margin_right = 260.0
margin_bottom = 175.0
rect_min_size = Vector2( 260, 180 )
window_title = "Change Settings"
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 250.0
margin_bottom = 174.0

[node name="Max_Arrows" type="SpinBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 240.0
margin_bottom = 24.0
value = 3.0
prefix = "Max Arrows:"

[node name="User_Arrows" type="SpinBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 240.0
margin_bottom = 52.0
value = 1.0
prefix = "Max User Arrows:"

[node name="Arrow_Speed" type="SpinBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 240.0
margin_bottom = 80.0
max_value = 1000.0
value = 600.0
prefix = "Arrow Speed:"

[node name="Arrow_Hold" type="SpinBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 240.0
margin_bottom = 108.0
step = 0.01
value = 1.0
prefix = "Arrow Onscreen Time:"

[node name="Arrow_Overlap" type="SpinBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 112.0
margin_right = 240.0
margin_bottom = 136.0
value = 30.0
prefix = "Arrow Overlap Radius:"

[node name="Show_Name" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 140.0
margin_right = 240.0
margin_bottom = 164.0
text = "Show Name on Arrow"

[node name="Arrow_Path_Opener" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0

[node name="Arrow_Path" type="FileDialog" parent="MarginContainer/VBoxContainer/Arrow_Path_Opener"]
unique_name_in_owner = true
margin_right = 315.0
margin_bottom = 130.0

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -59.5
margin_right = 115.0
margin_bottom = 50.5
rect_min_size = Vector2( 230, 110 )

[node name="Clickthrough" type="Label" parent="PopupDialog"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.5
margin_top = -32.5
margin_right = 76.5
margin_bottom = 32.5
text = "Clickthrough is enabled. To change settings
Please Press Ctrl + T"
align = 1
autowrap = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Arrow_Path_Opener" to="MarginContainer/VBoxContainer/Arrow_Path_Opener/Arrow_Path" method="popup"]
